# opentable-dataset

./: generate_queries.py  open_table_scraper.py  pyproject.toml
data/: dataset.json  metros.json  opentable_restaurants.json
