[tool.poetry]
name = "opentable-dataset"
version = "0.1.0"
description = ""
authors = ["nischalj10 <nischalj10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
playwright = "^1.47.0"
instructor = "^1.4.3"
pydantic = "^2.9.2"
ruff = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
